# pico-hermes

./: README.md  config.toml  pico_hermes.py  pyproject.toml  toolsets.py
raw/: README.md
src/pico_hermes/: config.py  main.py  toolsets.py  tui.py
src/pico_hermes/tools/: file_tools.py  http_tool.py  misc_tools.py  registry.py  terminal_tool.py
tests/: test_config.py  test_registry.py  test_toolsets.py
tools/: file_tools.py  registry.py  terminal_tool.py
wiki/: index.md  log.md  overview.md  schema.md
